# checkup

./: .gitignore  API.md  Cargo.toml  README.md  update_icons.sh
.github/workflows/: build.yml
src/: cache.rs  format_html.rs  icons.rs  index.html  main.rs
src/provider/: cgit.rs  forgejo.rs  github.rs  gitlab.rs  mod.rs
tools/: test_latest.rs  update_icons.sh
