[package]
name = "checkup"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
url = "2.5"
# openssl = { version = "0.10", features = ["vendored"] }
