[package]
name = "checkup"
version = "0.1.4"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
url = "2.5"
scraper = "0.19"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3          # Maximum optimizations
debug = false          # No debug info (smaller binary)
lto = "fat"            # Link‑time optimization
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Smaller binary, no unwind tables
incremental = false    # Disable incremental compilation
strip = true           # Remove symbol table (requires Rust 1.71+)
